oss/tui-markdown/src/renderer/snapshots/tui_markdown__renderer__blockquote__tests__blockquote__multiple_with_break.snap
---
source: tui-markdown/src/renderer/blockquote.rs
expression: |-
  from_str(indoc!("
                  > Blockquote 1
  
                  > Blockquote 2
              "))
---
Text::from_iter([
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("Blockquote 1"),
    ]).green(),
    Line::default(),
    Line::from_iter([
        Span::from(">"),
        Span::from(" "),
        Span::from("Blockquote 2"),
    ]).green(),
])
